update intro and citations
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -22,9 +22,9 @@ affiliation:
     institution   : "Corresponding author: Tominaga_Atsuko@phd.ceu.edu"
 
 abstract: |
-  Experts modulate their performance of actions for teaching purposes, performing slower and exaggerated movements when demonstrating novel actions to novices. The present study asked whether such modulations are also used to teach techniques of artistic expression. One domain where subtle movement modulations are crucial for achieving artistic expression is music. We investigated how skilled pianists modulate their playing to demonstrate to students the techniques required for conveying piece-related musical expressions, compared to performing the piece without didactic intentions. Expressions in the piece concerned either articulation (i.e., legato and staccato) or dynamics (i.e., forte and piano). The pianists played either with the goal to perform the piece to an audience or with the goal to teach the respective techniques to novices. When intending to teach articulation, skilled pianists produced more exaggerated staccato. When intending to teach dynamics, they created a larger contrast between forte and piano at structurally important points. We found consistent results with a simple musical scale (Experiment 1) and a more naturalistic piece of music (Experiment 2). These findings suggest that action modulations are performed not only to attract learners' attention but to highlight the most relevant aspects of the actions to be learnt.
+  Experts modulate their performance of actions for teaching purposes, performing slower and exaggerated movements when demonstrating novel actions to novices. The present study asked whether such modulations also occur during teaching performance of a music instrument, where subtle movement modulations are crucial for achieving artistic expression. While exaggerating performances of goal-directed actions outside of artistic contexts may be straightforward, it is an open question whether and how exaggeration for the purpose of teaching operates for actions that are expressive even when performed outside of a teaching context. Pianists were asked to demonstrate to students the techniques required for implementing notated expressions, compared to performing the piece without didactic intentions. Expressions in the piece concerned either articulation (i.e., legato and staccato) or dynamics (i.e., forte and piano). The pianists played either with the goal to perform the piece to an audience or with the goal to teach the respective techniques to novices. When intending to teach articulation, skilled pianists produced more exaggerated staccato. When intending to teach dynamics, they created a larger contrast between forte and piano. We found consistent results across a simple musical scale (Experiment 1) and a more naturalistic piece of music (Experiment 2). These findings show that teaching-specific action modulations generalize to expressive actions and suggest that action modulations serve to highlight the most relevant aspects of the actions to be learnt.
   
-keywords          : "teaching, expertise, skill transmission, artistic expression, music"
+keywords          : "teaching, skill transmission, sensorimotor communication, artistic expression, music"
 #wordcount         : ""
 
 bibliography      : ["reference.bib"]
@@ -64,11 +64,11 @@ Deliberate teaching has supported human skill transmission over generations and 
 
 Previous research has shown that demonstrators not only adjust their gestures [@campisi_2013] and actions [@fukuyama_2015] to learners' skills but engage in specific action modulations to highlight certain aspects of demonstrated actions. For example, Schaik and colleagues [@schaik_2019] showed that adults used specific action modulations for demonstrating different action effects of objects to infants. Ho and colleagues [@NIPS2016_6413] found that demonstrators chose costly movement paths at structurally important points to disambiguate one goal over other possibilities.
 
-Importantly, in some domains teaching requires not only demonstrating *what* to do, but *how* to perform actions. In artistic contexts, novices need to learn how exactly to perform actions by relying on specific techniques [@sloboda_2000]. For example, when playing a piece of music on the piano, it is not sufficient to press the keys in the correct order, but learners need to be able to implement expressive techniques [@juslin_2003]. This raises the question of whether and how experts modulate their actions during didactic demonstration in artistic contexts, where expressivity is an integral part of what learners need to acquire. Studying action modulations that serve the teaching of artistic techniques is also of broader theoretical importance: It can show whether action modulations can be used to selectively highlight subtle aspects of actions that define expert performance.
+Performing actions with exaggeration is straightforward for actions that are normally performed in the most efficient way possible [@pezzulo_2013]. However, how can particular aspects of actions be highlighted when the actions themselves are expressive even outside of a teaching context? This is the case in music performance, where pieces are played with expression. Expressivity is a vital component of performance and typically the main focus of music teaching [@laukka_2004]. Expressive skills are generally considered to be separate from technical skills, however, fine motor control is required to implement subtle sound modulations in expressive performance [@sloboda_2000]. In some music genres such as Western classical music, it is crucial to acquire the motor skills needed to perform a piece expressively. For example, pianists translate their own interpretations of music and convey their emotions by modulating specific parameters such as timing, smoothness and loudness of sound. This raises the question of whether and how musicians modulate their actions during didactic demonstration of expressive techniques.
 
-In the present study, we employed musical expressive techniques as skills to be taught because multiple properties of the performance (e.g., timing, smoothness, loudness) can be modulated at the same time. Specific and subtle aspects of the performance may need to be highlighted to teach a respective technique. Pianists were asked to perform a piece to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano). Articulation was assessed by key-overlap time between two consecutive notes. Positive key-overlap time indicates legato styles whereas negative key-overlap time indicates staccato styles. Dynamics was evaluated by key velocity of each key press. Higher key velocity means forte styles while lower key velocity means piano styles.
+In naturalistic teaching settings, teachers have many possibilities for how to convey to a learner how to play a piece expressively. They may use verbal communication [@woody_2000, woody_2006] and non-verbal bodily cues [@simones_2015] as well as modulating the sounds that they are producing. In the present study, we focused entirely on the teaching of expressive techniques through sound in order to determine whether expert musicians would systematically exaggerate the actions necessary to implement a particular technique for musical expression. Pianists were asked to perform a piece to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano). Articulation was assessed by key-overlap time between two consecutive notes. Positive key-overlap time indicates legato styles whereas negative key-overlap time indicates staccato styles. Dynamics was evaluated by key velocity of each key press. Higher key velocity means forte styles while lower key velocity means piano styles.
 
-If experts rely on generic action modulations, it can be expected that they will play more slowly during didactic demonstration, regardless of the kind of expressive techniques to be taught. To the extent that experts use action modulations to support their teaching of specific expressive techniques, they should exaggerate legato (i.e., key-overlap time should be more positive) and staccato (i.e., key-overlap time should be more negative) when teaching articulation whereas they should exaggerate forte (i.e., key velocity should be higher) and piano (i.e., key velocity should be lower) when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expression, e.g., the smoothness of sound while teaching dynamics.
+If experts rely on generic action modulations, it can be expected that they will play more slowly during didactic demonstration, regardless of the kind of techniques to be taught. To the extent that experts use action modulations to support their teaching of specific techniques, they should exaggerate legato (i.e., key-overlap time should be more positive) and staccato (i.e., key-overlap time should be more negative) when teaching articulation whereas they should exaggerate forte (i.e., key velocity should be higher) and piano (i.e., key velocity should be lower) when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expression, e.g., the smoothness of sound while teaching dynamics.
 
 In Experiment 1, we employed a simple musical scale to examine whether and how skilled pianists vary their performance depending on which expressive techniques (i.e., either articulation or dynamics) they are teaching. Experiment 2 was conducted to replicate our findings from Experiment 1 with a more naturalistic piece of music.
 
